- "Main" now takes a file as an arg and prints the ast - reorganized resource folder

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ project/plugins/project/
 .scala_dependencies
 .worksheet
 
+# macOS index files
+**/.DS_Store
+
 #IntelliJ
 # User-specific stuff:
 .idea/workspace.xml
