--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "jcodemodel"]
 	path = jcodemodel
-	url = https://github.com/phax/jcodemodel.git
+	url = https://github.com/mcoblenz/jcodemodel.git
