Initial translation to and invocation of OpenJML. Doesn't really work yet.

--- a/OpenJML/openjml.properties
+++ b/OpenJML/openjml.properties
@@ -3,10 +3,10 @@
 ## of JAVA_HOME and the PATH so that the correct JRE is invoked.
 ## If no special setup is needed, leave the property defined
 ## but empty.
-openjml.localSetup=`which z3`
+openjml.localSetup=
 
 ## The name of the prover to use by default for running ESC
-openjml.defaultProver=z3_4_3
+openjml.defaultProver=z3_4_4
 
 ## Set the property to the absolute path name of the executable
 ## that launches the yices prover, with similarly named
@@ -16,6 +16,6 @@ openjml.defaultProver=z3_4_3
 openjml.prover.yices=
 openjml.prover.cvc4=
 openjml.prover.z3_4_3=
-openjml.prover.z3_4_4=z3
+openjml.prover.z3_4_4=`which z3`
 openjml.prover.simplify=
 openjml.prover.boogie=
