We can now verify SimpleVerification.obs!

--- a/OpenJML/openjml.properties
+++ b/OpenJML/openjml.properties
@@ -6,7 +6,7 @@
 openjml.localSetup=
 
 ## The name of the prover to use by default for running ESC
-openjml.defaultProver=z3_4_4
+openjml.defaultProver=z3_4_3
 
 ## Set the property to the absolute path name of the executable
 ## that launches the yices prover, with similarly named
@@ -15,7 +15,7 @@ openjml.defaultProver=z3_4_4
 ## name (the portion after 'openjml.prover.').
 openjml.prover.yices=
 openjml.prover.cvc4=
-openjml.prover.z3_4_3=
-openjml.prover.z3_4_4=`which z3`
+openjml.prover.z3_4_3=/Users/mcoblenz/Downloads/z3-4.3.0-x86/bin/z3
+openjml.prover.z3_4_4=
 openjml.prover.simplify=
 openjml.prover.boogie=
