--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: trusty
+sudo: false
 language: scala
 scala:
     - 2.12.4
@@ -7,3 +9,7 @@ scala:
 # as of java version 8
 jdk:
   - oraclejdk8
+
+before_install:
+  - ./install-protobuf.sh
+  - export PATH=${PATH}:${HOME}/protobuf/
