Add obstest to .travis.yml.
It's configured by the resources/tests/tests_to_run.txt file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,5 @@ jdk:
 before_install:
   - ./install-protobuf.sh
   - export PATH=${PATH}:${HOME}/protobuf/
+
+script: cat resources/tests/tests_to_run.txt | xargs perl obstest.pl
