--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ before_install:
   - ./install-protobuf.sh
   - export PATH=${PATH}:${HOME}/protobuf/
 
-script: cat resources/tests/tests_to_run.txt | xargs perl obstest.pl
+script: cat resources/tests/tests_to_run.txt | xargs perl obstest.pl -v
