also run the SBT tests in addition to obstest

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ before_install:
   - ./install-protobuf.sh
   - export PATH=${PATH}:${HOME}/protobuf/
 
-script: cat resources/tests/tests_to_run.txt | xargs perl obstest.pl -v
+script:
+  - sbt ++2.12.4 test
+  - cat resources/tests/tests_to_run.txt | xargs perl obstest.pl -v
