Integrate the obstest script with Travis CI. (#143)
* Add obstest to .travis.yml.

It's configured by the resources/tests/tests_to_run.txt file.

* make tests run in verbose mode, so we can tell why they failed

* Don't restore from chaincode archive on testing.

Since it makes the results of the test weirdly nondeterministic.

* remove archive files after we're done with them

* Fix test to actually look for expected output.

* also run the SBT tests in addition to obstest

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,7 @@ jdk:
 before_install:
   - ./install-protobuf.sh
   - export PATH=${PATH}:${HOME}/protobuf/
+
+script:
+  - sbt ++2.12.4 test
+  - cat resources/tests/tests_to_run.txt | xargs perl obstest.pl -v
