Steps toward getting client Obsidian programs working.
Still need to: automate starting fabric-ca; make client actually set up the user correctly; write code to
support invoking transactions remotely.

--- a/buildscript/build-chaincode.gradle
+++ b/buildscript/build-chaincode.gradle
@@ -19,7 +19,9 @@ repositories {
 sourceSets {
     main {
         java {
-            srcDirs = ["$codeDirectory", '../Obsidian Runtime/src/Runtime']
+            srcDirs = ["$codeDirectory", '../Obsidian Runtime/src/Runtime/']
+            exclude '**/*Mock.java'
+
         }
     }
 }
