--- a/buildscript/build.gradle
+++ b/buildscript/build.gradle
@@ -19,7 +19,7 @@ repositories {
 sourceSets {
     main {
         java {
-            srcDirs = ["$codeDirectory", '../Obsidian Runtime/src/Runtime']
+            srcDirs = ["$codeDirectory", '../Obsidian_Runtime/src/main/java/Runtime']
         }
     }
 }
@@ -33,7 +33,7 @@ run {
 dependencies {
     compile 'io.grpc:grpc-all:0.13.2'
     compile 'commons-cli:commons-cli:1.3.1'
-    compile 'org.hyperledger:shim-client:1.0'
+    compile 'org.hyperledger.fabric-chaincode-java:fabric-chaincode-shim:1.4.+'
     compile 'org.glassfish:javax.json:1.1.0-M1'
     compile 'org.json:json:20171018'
     compile 'com.google.protobuf:protobuf-java:3.5.1'
