Deleted settings since not needed in Gradle 5.2.1, and build Runtime .jar straight to /docs/repository

--- a/Obsidian_Runtime/build.gradle
+++ b/Obsidian_Runtime/build.gradle
@@ -22,4 +22,10 @@ publishing {
             from components.java
         }
     }
+    repositories {
+        //publish to local directory for GitHub hosting
+        maven {
+            url '../docs/repository'
+        }
+    }
 }
