--- a/chaincode/build.gradle
+++ b/chaincode/build.gradle
@@ -15,16 +15,15 @@ sourceCompatibility = 1.8
 
 repositories {
     maven {
-        url 'https://www.andrew.cmu.edu/user/huizhez/repository'
+        url 'http://obsidian-lang.com/repository'
     }
     mavenCentral()
 }
 
 dependencies {
     implementation 'edu.cmu.cs.obsidian:runtime:0.1'
-    implementation group: 'org.hyperledger.fabric-chaincode-java', name: 'fabric-chaincode-shim', version: '1.+'
-    implementation 'org.json:json:20171018'
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.hyperledger.fabric-chaincode-java', name: 'fabric-chaincode-shim', version: '1.+'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 shadowJar {
