Disabled integration tests for now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,6 @@ before_install:
 
 script:
   - sbt ++2.12.4 test
-  - cat resources/tests/tests_to_run.txt | xargs perl obstest.pl -v
+# Since the mock environment is deprecated, the tests need to be updated.
+# For now, disable the integration tests.
+#  - cat resources/tests/tests_to_run.txt | xargs perl obstest.pl -v
