--- a/network-framework/docker-compose-cli.yaml
+++ b/network-framework/docker-compose-cli.yaml
@@ -66,7 +66,7 @@ services:
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       #- CORE_LOGGING_LEVEL=DEBUG
-      - CORE_LOGGING_LEVEL=INFO
+      - FABRIC_LOGGING_SPEC=INFO
       - CORE_CHAINCODE_LOGGING_LEVEL=info
       - CORE_CHAINCODE-LOGGING_SHIM=info
       - CORE_PEER_ID=cli
