Upgrade to protobuf 3.7.0 and global code finished for feature

--- a/Obsidian_Runtime/build.gradle
+++ b/Obsidian_Runtime/build.gradle
@@ -10,6 +10,7 @@ repositories {
 
 dependencies {
     implementation 'org.json:json:20171018'
+    implementation 'commons-io:commons-io:2.5'
     implementation group: 'org.hyperledger.fabric-chaincode-java', name: 'fabric-chaincode-shim', version: '[1.4,)'
 }
 
