--- a/fabric/java/build.gradle
+++ b/fabric/java/build.gradle
@@ -4,7 +4,7 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 plugins {
-    id 'com.github.johnrengelman.shadow' version '2.0.3'
+    id 'com.github.johnrengelman.shadow' version '5.0.0'
     id 'java'
 }
 
@@ -27,7 +27,7 @@ dependencies {
 }
 
 shadowJar {
-    baseName = 'chaincode'
+    baseName = '{{CLASS_NAME}}'
     version = null
     classifier = null
 
