--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - ./install-protobuf.sh
   - ./install-bin.sh
   - export PATH=${PATH}:${HOME}/protobuf/
-  - export PATH=/bin:$PATH
+  - export PATH=${PATH}:${HOME}/bin/
 
 
 script:
