Working version of the code - manual 'remote' annotations needed in Client code

--- a/Obsidian_Runtime/build.gradle
+++ b/Obsidian_Runtime/build.gradle
@@ -8,6 +8,8 @@ repositories {
     mavenCentral()
 }
 
+targetCompatibility = 1.8
+
 dependencies {
     implementation 'org.json:json:20171018'
     implementation 'commons-io:commons-io:2.5'
