--- a/network-framework/.gitignore
+++ b/network-framework/.gitignore
@@ -1,4 +1,6 @@
+/channel-artifacts/*.tx
+/channel-artifacts/*.block
+/crypto-config/*
+/docker-compose-e2e.yaml
 /ledgers
 /ledgers-backup
-/crypto-config
-/channel-artifacts
