--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ jdk:
 
 before_install:
   - ./travis_specific/install-protobuf.sh
-  - ./travis_specific/install-bin.sh
+  - curl -sSL http://bit.ly/2ysbOFE | bash -s 1.4.1
+  - mv bin $HOME
   - export PATH=${PATH}:${HOME}/protobuf/
   - export PATH=${PATH}:${HOME}/bin/
 
