--- a/fabric/java/build.gradle
+++ b/fabric/java/build.gradle
@@ -17,6 +17,9 @@ repositories {
     maven {
         url 'http://obsidian-lang.com/repository'
     }
+    jcenter()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+    maven { url 'https://jitpack.io' }
     mavenCentral()
 }
 
