--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -6,3 +6,8 @@ version: 2
 
 sphinx:
   configuration: user_guide/source/conf.py
+
+python:
+  install:
+    - requirements: user_guide/requirements.txt
+    
