Added a command to compile a client program.

--- a/obs-vscode-extension/package.json
+++ b/obs-vscode-extension/package.json
@@ -60,7 +60,11 @@
         "commands": [
             {
                 "command": "extension.compileObsidian",
-                "title": "Obsidian: Compile file"
+                "title": "Obsidian: Compile smart contract"
+            },
+            {
+                "command": "extension.compileObsidianClient",
+                "title": "Obsidian: Compile client"
             }
         ],
         "problemMatchers": [
