--- a/obs-vscode-extension/package.json
+++ b/obs-vscode-extension/package.json
@@ -13,7 +13,7 @@
     ],
     "devDependencies": {
         "@types/mocha": "^2.2.42",
-        "@types/node": "^10.12.21",
+        "@types/node": "^10.14.17",
         "tslint": "^5.12.1",
         "typescript": "^3.3.1",
         "vscode": "^1.1.34"
@@ -53,6 +53,33 @@
                     "file": {
                         "type": "string",
                         "description": "The Obsidian file to be compiled."
+                    },
+                    "presentationOptions": {
+                        "clear": true
+                    }
+                }
+            },
+            {
+                "type": "obsidian-compile-client",
+                "required": [
+                    "file"
+                ],
+                "properties": {
+                    "file": {
+                        "type": "string",
+                        "description": "The Obsidian client file to be compiled."
+                    }
+                }
+            },
+            {
+                "type": "obsidian-deploy",
+                "required": [
+                    "file"
+                ],
+                "properties": {
+                    "file": {
+                        "type": "string",
+                        "description": "The Obsidian contract to be deployed."
                     }
                 }
             }
@@ -63,15 +90,26 @@
                 "title": "Obsidian: Compile smart contract"
             },
             {
+                "command": "extension.deployObsidian",
+                "title": "Obsidian: Deploy smart contract and start Fabric network"
+            },
+            {
                 "command": "extension.compileObsidianClient",
                 "title": "Obsidian: Compile client"
-            }
+            },
+            {
+               "command": "extension.obsidianDown",
+               "title": "Obsidian: Stop Fabric network"
+           }
         ],
         "problemMatchers": [
             {
-                "name": "obsidian",
+                "name": "ObsidianProblemMatcher",
                 "owner": "obs",
-                "fileLocation": ["relative", "${workspaceFolder}"],
+                "fileLocation": [
+                    "relative",
+                    "${workspaceFolder}"
+                ],
                 "pattern": {
                     "regexp": "^(.*) (\\d+).(\\d+):\\s+(.*)$",
                     "file": 1,
