Added autoup script to automaticallytake down the network as needed, and then install or upgrade as appropriate.

--- a/network-framework/.env
+++ b/network-framework/.env
@@ -1,4 +1,4 @@
 COMPOSE_PROJECT_NAME=net
 IMAGE_TAG=latest
-CHAINCODE_DIRECTORY=GenericsStateVariables
-
+CHAINCODE_DIRECTORY=/Users/mcoblenz/code/Obsidian/evaluation/pilot6/auction-exercises/build/Auction
+CHAINCODE_NAME=Auction
