--- a/obs-vscode-extension/package.json
+++ b/obs-vscode-extension/package.json
@@ -98,6 +98,10 @@
                 "title": "Obsidian: Compile client"
             },
             {
+               "command": "extension.runObsidianClient",
+               "title": "Obsidian: Run client"
+           },
+            {
                "command": "extension.obsidianDown",
                "title": "Obsidian: Stop Fabric network"
            }
