--- a/network-framework/docker-compose-cli.yaml
+++ b/network-framework/docker-compose-cli.yaml
@@ -85,12 +85,12 @@ services:
       - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/ca.crt
       - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.example.com/users/Admin@org1.example.com/msp
-      - CC_SRC_PATH=/opt/gopath/src/github.com/$CHAINCODE_DIRECTORY/
+      - CC_SRC_PATH=/opt/gopath/src/github.com/$CHAINCODE_NAME/
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: /bin/bash
     volumes:
         - /var/run/:/host/var/run/
-        - ./../$CHAINCODE_DIRECTORY/:/opt/gopath/src/github.com/$CHAINCODE_DIRECTORY
+        - $CHAINCODE_DIRECTORY/:/opt/gopath/src/github.com/$CHAINCODE_NAME
         - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
         - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
         - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
