Added support for project.json files, which specify which Obsidian files contain the chaincode and client. This allows the extension to build and run the right code regardless of which window has focus.

--- a/obs-vscode-extension/package.json
+++ b/obs-vscode-extension/package.json
@@ -99,7 +99,7 @@
             },
             {
                "command": "extension.runObsidianClient",
-               "title": "Obsidian: Run client"
+               "title": "Obsidian: Compile and run client"
            },
             {
                "command": "extension.obsidianDown",
