--- a/fabric/java/build.gradle
+++ b/fabric/java/build.gradle
@@ -26,6 +26,7 @@ repositories {
 dependencies {
     implementation 'edu.cmu.cs.obsidian:runtime:0.1'
     compile group: 'org.hyperledger.fabric-chaincode-java', name: 'fabric-chaincode-shim', version: '1.+'
+    compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.10.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
