--- a/Obsidian_Runtime/build.gradle
+++ b/Obsidian_Runtime/build.gradle
@@ -7,7 +7,7 @@ plugins {
 repositories {
     mavenCentral()
     maven {
-        url "https://www.jitpack.io'
+        url "https://www.jitpack.io"
     }
 }
 
