--- a/fabric/java/build.gradle
+++ b/fabric/java/build.gradle
@@ -12,6 +12,7 @@ group 'org.hyperledger.fabric-chaincode-java'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8 
 
 repositories {
     maven {
