Added compilation script and updated README

--- a/obs-vscode-extension/package.json
+++ b/obs-vscode-extension/package.json
@@ -23,7 +23,8 @@
         "Programming Languages"
     ],
     "scripts": {
-        "watch": "tsc -b -w"
+        "watch": "tsc -b -w",
+        "compile": "tsc && cd server && tsc" 
     },
     "contributes": {
         "languages": [
