Added postinstall hook to install server dependencies

--- a/obs-vscode-extension/package.json
+++ b/obs-vscode-extension/package.json
@@ -24,6 +24,7 @@
     ],
     "scripts": {
         "watch": "tsc -b -w",
+        "postinstall": "cd server && npm install",
         "compile": "tsc && cd server && tsc"
     },
     "contributes": {
