--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ jdk:
 
 before_install:
   - ./travis_specific/install-protobuf.sh
-  - ./travis_specific/install-solc.sh
+  - sudo add-apt-repository ppa:ethereum/ethereum
+  - sudo apt-get update
+  - sudo apt-get install solc
   - curl -sSL http://bit.ly/2ysbOFE | bash -s 1.4.1 -s
   - mv bin $HOME
   - export PATH=${PATH}:${HOME}/protobuf/
-  - export PATH=${PATH}:${HOME}/solc/
   - export PATH=${PATH}:${HOME}/bin/
 
 
