--- a/.travis.yml
+++ b/.travis.yml
@@ -10,18 +10,18 @@ jdk:
   - oraclejdk8
 
 before_install:
-  - ./travis_specific/install-protobuf.sh
-  - curl -sSL http://bit.ly/2ysbOFE | bash -s 1.4.1 -s
-  - mv bin $HOME
-  - export PATH=${PATH}:${HOME}/protobuf/
-  - export PATH=${PATH}:${HOME}/bin/
+  # - ./travis_specific/install-protobuf.sh
+  # - curl -sSL http://bit.ly/2ysbOFE | bash -s 1.4.1 -s
+  # - mv bin $HOME
+  # - export PATH=${PATH}:${HOME}/protobuf/
+  # - export PATH=${PATH}:${HOME}/bin/
   # install ganache and truffle
   - ./travis_specific/install_ganache.sh
 
 script:
-  - gradle publish -b Obsidian_Runtime/build.gradle
-  - sbt ++2.13.2 test
-  - bash travis_specific/tests.sh
+  # - gradle publish -b Obsidian_Runtime/build.gradle
+  - sbt ++2.13.2 test # this actually builds Obsidian
+  # - bash travis_specific/tests.sh
   - bash travis_specific/ganache_tests.sh
 
 cache:
