debugging travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 dist: focal
 language: scala
 scala:
-    - 2.13.5  ## 2.13.5
+    - 2.13.5  ## used to be 2.13.2
+
+node_js:
+     - 9.4.0
 
 # This may be necessary depending on the tests we eventually run. For example,
 # the chaincode base server uses "java.util.Base64", which is only supported
 # as of java version 8
 jdk:
-  - oraclejdk8
+  - oraclejdk9 ## todo / iev updating this to jdk9 to see if i can get a more modern node too; deep waters
 
 before_install:
   # - ./travis_specific/install-protobuf.sh
