--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ jdk:
   - oraclejdk9 ## todo / iev updating this to jdk9 to see if i can get a more modern node too; deep waters
 
 before_install:
-  # - ./travis_specific/install-protobuf.sh
-  # - curl -sSL http://bit.ly/2ysbOFE | bash -s 1.4.1 -s
+  - ./travis_specific/install-protobuf.sh
+  # - curl -sSL http://bit.ly/2ysbOFE | bash -s 1.4.1 -s # installs hyperledger
   # - mv bin $HOME
-  # - export PATH=${PATH}:${HOME}/protobuf/
-  # - export PATH=${PATH}:${HOME}/bin/
+  - export PATH=${PATH}:${HOME}/protobuf/
+  - export PATH=${PATH}:${HOME}/bin/
   # install ganache and truffle
   - ./travis_specific/install_ganache.sh
 
