--- a/.travis.yml
+++ b/.travis.yml
@@ -9,20 +9,13 @@ node_js:
 jdk:
   - oraclejdk12 ## as of 9 march 2021, up to jdk12 seems to work but 13/14/15 fail
 
-## todo / iev: gradle that was getting run on the jdk15 shot above was 5.1.1 but current version
-##  is 6.8.3. so that probably needs to get updated to work with modern java, but i'm not sure
-##  where that's happening. the errors i was seeing were of the form of not finding libraries.
-##
-## compare https://travis-ci.org/github/mcoblenz/Obsidian/builds/761498294
-## and https://travis-ci.org/github/mcoblenz/Obsidian/builds/761505439
-
-
 before_install:
   - ./travis_specific/install-protobuf.sh
   # - curl -sSL http://bit.ly/2ysbOFE | bash -s 1.4.1 -s # installs hyperledger
   # - mv bin $HOME
   - export PATH=${PATH}:${HOME}/protobuf/
   - export PATH=${PATH}:${HOME}/bin/
+  - export OBS=${HOME}/Obsidian
   # install ganache and truffle
   - ./travis_specific/install_ganache.sh
 
