--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ jdk:
 
 before_install:
   - ./travis_specific/install-protobuf.sh
-  - curl -sSL http://bit.ly/2ysbOFE | bash -s 1.4.1 -s # installs hyperledger
+  - curl -sSL http://bit.ly/2ysbOFE | bash -s 1.4.1 -s
   - mv bin $HOME
   - export PATH=${PATH}:${HOME}/protobuf/
   - export PATH=${PATH}:${HOME}/bin/
