--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ jdk:
 before_install:
   - ./travis_specific/install-protobuf.sh
   - curl -sSL http://bit.ly/2ysbOFE | bash -s 1.4.1 -s
-  - mv bin $HOME
+  - mv bin/* $HOME/bin/
   - export PATH=${PATH}:${HOME}/protobuf/
   - export PATH=${PATH}:${HOME}/bin/
   - ./travis_specific/install_ganache.sh
