running evm with ganache-cli in travis ci jobs (#301)
* adding the whole idea directory to gitignore

* roughing in some testing scripts that run yul code through truffle and ganache. these almost certainly do not work.

* tweaking permissions, per https://stackoverflow.com/questions/42154912/permission-denied-for-build-sh-file

* updating npm so that it's modern enough to work for ganache

* commenting out fabric tests

* double quotes for safety against splitting

* debugging travis build

* debugging travis build

* debugging travis build

* travis_specific/install_ganache.sh

* updating to a more modern ubuntu to maybe solve some node problems

* debugging travis build

* debugging travis build

* going big with version increments

* debugging travis build

* debugging travis build

* debugging travis build xx

* breadcrumbs for myself for tomorrow

* java version

* java11 worked, trying 12. also actually running ganache tests

* moving comments around, removing some directory manipulation commands

* updating sbt version to remove error about log4j

* fixing some Auto-application to () is deprecated errors in the scala

* fixing a scala warning, bumping java version too

* adding a catch all case to the parser to squelch a warning

* 14 seems to be too much, lets try 13

* down to 12

* changes

* some trivial changes to trigger a fresh travis job

* Check to make sure ganache-cli and truffle are installed.
Put the output of solc in EmptyContract.evm.

* Use $TRAVIS_BUILD_DIR to find the repository directory.

* stubs

* Capture return status from individual tests and fail on any failures.

* config file to cause truffle to run evm, possibly

* stepping through emptycontract.sh locally; next thing is to figure out the docker invocation with volumes and maybe a local permission problem for me

* truffle init with fewer Ns

* removing some unused imports as an excuse to kick off a new travi

--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,13 @@ project/plugins/project/
 *.proto
 .idea/libraries/
 
+.idea/modules/*.iml
+.idea/modules.xml
+
 # Gradle build script caches and whatnot
 buildscript/.gradle
 buildscript/build
 # Vim
 *.swp
+
+.bsp
