--- a/fabric/java/build.gradle
+++ b/fabric/java/build.gradle
@@ -16,9 +16,9 @@ targetCompatibility = 1.8
 
 repositories {
     maven {
-        url 'http://obsidian-lang.com/repository'
+        url 'https://obsidian-lang.com/repository'
     }
-    jcenter()
+
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     maven { url 'https://jitpack.io' }
 
@@ -27,15 +27,14 @@ repositories {
 
 dependencies {
     implementation 'edu.cmu.cs.obsidian:runtime:0.1'
-    compile group: 'org.hyperledger.fabric-chaincode-java', name: 'fabric-chaincode-shim', version: '1.4.4'
-    compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.11.4'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.hyperledger.fabric-chaincode-java', name: 'fabric-chaincode-shim', version: '1.4.4'
+    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.11.4'
 }
 
 shadowJar {
-    baseName = 'chaincode'
-    version = null
-    classifier = null
+    archiveBaseName = 'chaincode'
+    archiveVersion = null
+    archiveClassifier = null
 
     manifest {
         attributes 'Main-Class': 'org.hyperledger.fabric.example.{{CLASS_NAME}}'
