--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,14 @@ install:
     tar zxf $HOME/sbt.tgz -C $HOME
     sudo rm /usr/local/bin/sbt
     sudo ln -s $HOME/sbt/bin/sbt /usr/local/bin/sbt
-
-script:
   - gradle publish -b Obsidian_Runtime/build.gradle
   - sbt ++$TRAVIS_SCALA_VERSION test # this actually builds Obsidian
-  - bash travis_specific/tests.sh
-  - bash travis_specific/ganache_tests.sh
+
+env:
+  - TEST_SUITE=tests
+  - TEST_SUITE=ganache_tests
+
+script: "bundle exec bash travis_specific/$TEST_SUITE"
 
 cache:
   directories:
