--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
     sudo rm /usr/local/bin/sbt
     sudo ln -s $HOME/sbt/bin/sbt /usr/local/bin/sbt
   - gradle publish -b Obsidian_Runtime/build.gradle
-  - sbt ++$TRAVIS_SCALA_VERSION test # this actually builds Obsidian
+  - sbt ++$TRAVIS_SCALA_VERSION assembly # this actually builds Obsidian
 
 env:
   - TEST_SUITE=tests.sh
