--- a/.travis.yml
+++ b/.travis.yml
@@ -18,21 +18,14 @@ before_install:
   - ./travis_specific/install_ganache.sh
 
 install:
-  - |
-    # from https://github.com/sbt/sbt/releases:
-    # update this only when sbt-the-bash-script needs to be updated
-    export SBT_LAUNCHER=1.5.0
-    export SBT_OPTS="-Dfile.encoding=UTF-8"
-    curl -L --silent "https://github.com/sbt/sbt/releases/download/v$SBT_LAUNCHER/sbt-$SBT_LAUNCHER.tgz" > $HOME/sbt.tgz
-    tar zxf $HOME/sbt.tgz -C $HOME
-    sudo rm /usr/local/bin/sbt
-    sudo ln -s $HOME/sbt/bin/sbt /usr/local/bin/sbt
-
-script:
   - gradle publish -b Obsidian_Runtime/build.gradle
-  - sbt ++$TRAVIS_SCALA_VERSION test # this actually builds Obsidian
-  - bash travis_specific/tests.sh
-  - bash travis_specific/ganache_tests.sh
+  - sbt ++$TRAVIS_SCALA_VERSION assembly # this builds the Obsidian jar
+
+env:
+  - TEST_SUITE=tests.sh
+  - TEST_SUITE=ganache_tests.sh
+
+script: "travis_specific/$TEST_SUITE"
 
 cache:
   directories:
