updating travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ node_js:
 jdk:
   - oraclejdk12 ## as of 9 march 2021, up to jdk12 seems to work but 13/14/15 fail
 
-#before_install:
+before_install:
+  - echo "before install"
 #  - ./travis_specific/install-protobuf.sh
 #  - curl -sSL http://bit.ly/2ysbOFE | bash -s 1.4.1 -s
 #  - mv bin/* $HOME/bin/
