travis updates; removing npm audit that wasnt doing anything, taking a pass at conditional jobs

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,11 @@ env:
 
 script: "travis_specific/$TEST_SUITE"
 
+jobs:
+  exclude:
+    - branch != master
+      env: tests.sh
+
 cache:
   directories:
     - $HOME/.cache/coursier
