--- a/.travis.yml
+++ b/.travis.yml
@@ -7,25 +7,21 @@ node_js:
      - 15.11.0
 
 jdk:
-  - oraclejdk12 ## as of 9 march 2021, up to jdk12 seems to work but 13/14/15 fail
-
-before_install:
-  - ./travis_specific/install-protobuf.sh
-  - curl -sSL http://bit.ly/2ysbOFE | bash -s 1.4.1 -s
-  - mv bin/* $HOME/bin/
-  - export PATH=${PATH}:${HOME}/protobuf/
-  - export PATH=${PATH}:${HOME}/bin/
-  - ./travis_specific/install_ganache.sh
+  - oraclejdk12 # as of 10 june 2021, up to jdk12 works but 13+ fail
 
 install:
   - gradle publish -b Obsidian_Runtime/build.gradle
-  - sbt ++$TRAVIS_SCALA_VERSION assembly # this builds the Obsidian jar
 
 env:
-  - TEST_SUITE=tests.sh
+  - TEST_SUITE=fabric_tests.sh
   - TEST_SUITE=ganache_tests.sh
 
 script: "travis_specific/$TEST_SUITE"
+
+jobs:
+  exclude:
+    - if: branch != master
+      env: TEST_SUITE=fabric_tests.sh
 
 cache:
   directories:
