--- a/network-framework/.env
+++ b/network-framework/.env
@@ -1,4 +1,4 @@
 COMPOSE_PROJECT_NAME=net
 IMAGE_TAG=latest
-CHAINCODE_DIRECTORY=/Users/mcoblenz/code/Obsidian/evaluation/pilot6/auction-exercises/build/Auction
-CHAINCODE_NAME=Auction
+CHAINCODE_DIRECTORY=/mnt/c/Users/Jason/Obsidian/ExampleTokenBank
+CHAINCODE_NAME=default
