monkeying with the host name

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,4 @@ before_cache:
   - find $HOME/.sbt        -name "*.lock"               -print -delete
 
 addons:
-  hosts:
-    - localhost
+  hostname: localhost
