--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ jdk:
 
 before_install:
   - nvm install 17
+  - npm install -g npm
+  - npm install -g ganache-cli
 
 install:
   - gradle publish -b Obsidian_Runtime/build.gradle
