adding possible node work around

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   - gradle publish -b Obsidian_Runtime/build.gradle
 
 env:
+  - NODE_OPTIONS=--openssl-legacy-provider
   - TEST_SUITE=fabric_tests.sh
   - TEST_SUITE=ganache_tests.sh
 
