--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ jdk:
   - oraclejdk12 # as of 10 june 2021, up to jdk12 works but 13+ fail
 
 before_install:
-  - nvm install 16
-  - npm install -g npm
-  - npm install -g ganache-cli
+  - nvm install 16 # as of 19 nov 2021, this version of node works with ganache and 17 does not
+  - npm install -g npm # update npm
+  - npm install -g ganache-cli # install ganache
   - sudo apt update
-  - sudo apt install libcryptx-perl
-  - sudo snap install jq
+  - sudo apt install libcryptx-perl # crypto library needed for hashing in ganache interactions
+  - sudo snap install jq # JSON tool needed for ganache interactions
 
 install:
   - gradle publish -b Obsidian_Runtime/build.gradle
