updates to the testing harness (#408)
* adding a test case to show that an old bug got fixed. closes #334

* adding a new test case to show that arguments are not currently passed to main

* adding a different presentation of the tests info while i'm thinking of it

* fixing a bad change to IDE settings

* adding a yul statement for comments

* adding helpers to compute abi decoder functions and insert them into the dispatch table and emit them in the body of the object

* updating test cases

* removing old test

* removing old test

* code to decode individual ints, using that to decode tuples, emitting it in the output file

* i forget to change the name of the contract every single time i copy a test

* traveseing the params not the returns

* renaming, scraps

* fixing an error in the ABI names we map to

* removing a todo
"

* scraps, scala style

* adding parameters to the json for the two tests that use them; the technical debt here is quickly becoming too much but i want to make sure this works before doing a pass at rewriting the test harness

* removing duplicate decoders from output, only assigning params to locals if there are more than 0 of them. this should make the old tests pass again

* using distinct instead of hard to read translations to and from set

* Adding some documentation and removing some todos

* fixing json for mainargs1, updating test script to read json for the two new tests in a slightly hacky and specific way

* increasing the padding size on arguments

* test.json is kind of part of a rewrite of the test infrastructure and not really part of this PR. so it doesn't belong in this branch anyway AND is breaking the tests

* removing some dead boilerplate

* updating the padding to the right length in the test script; removing a dead call to decode

* scala style and whitespace

* scraps, comments

* removing old json in favor of one flat file with less redundancy

* python vers

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,14 @@ before_install:
   - nvm install 16 # as of 19 nov 2021, this version of node works with ganache and 17 does not
   - npm install -g npm # update npm
   - npm install -g ganache-cli # install ganache
-  - sudo apt update
-  - sudo apt install libcryptx-perl # crypto library needed for hashing in ganache interactions
-  - sudo snap install jq # JSON tool needed for ganache interactions
+  - python -m pip install termcolor eth_abi polling httpx pycryptodome
 
 install:
   - gradle publish -b Obsidian_Runtime/build.gradle
 
 env:
   - TEST_SUITE=fabric_tests.sh
-  - TEST_SUITE=ganache_tests.sh
+  - TEST_SUITE=ganache_tests.py
 
 script: "travis_specific/$TEST_SUITE"
 
