updating master from shadow master (#414)
* disabling the pager in my pretty printing run script

* change the elaboration of `new` and non-local Invocations to match the flat yul object style (#367)

* making a change to double check work flow

* adding a stub for computing the size of a contract; that'll be its own PR entirely one day fairly soon, but for now, we assume that we just need 32 bytes

* using hex values for some boilerplate so that it matches the docs

* reworking constructors to just allocate memory

* adding some helper functions in util. one is a renaming for transactions from child contracts; the other is basically a type-checked comment pointing out uses of some pretty substantian technical debt

* temporarily removing the code to translate child contracts. rewriting the translation of Invocations to remap everything to local invocations instead, into the names that will be created in the flat yul object

* removing an assertion and adding translation of string literals

* whitespace, scala style

* utility function for undoing the transaction renaming

* generate flat yul object from child contracts (#369)

* rename, add boolean for main-ness in translate decl

* changing signature of translateDeclaration to remove a return that doesn't do anything

* whitespace, scala style

* comments

* scraps; adding an assert

* changing how child contracts are processed

* rewrite of translateTransaction

* chainging signature of translateStatement

* more threading through inMain

* whitespace, scala style

* adding some docs

* removing the nicer output for typed names in favor of a bland one, per solc's current limitations. adding a comment about why.

* adding a temporary fix to the top of the dispatch table pending talking with MC"

* removing a stale comment

* comments

* adding missing declarations to invocations

* cleaning up comments and some messy logic around temporary variables

* remo

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ jdk:
   - oraclejdk12 # as of 10 june 2021, up to jdk12 works but 13+ fail
 
 before_install:
-  - nvm install 16 # as of 19 nov 2021, this version of node works with ganache and 17 does not
+  - nvm install 17 # as of 26 jan 2022, node 17 works with ganache 7 (below)
   - npm install -g npm # update npm
-  - npm install -g ganache-cli # install ganache
-  - python -m pip install termcolor eth_abi polling httpx pycryptodome
+  - npm install -g ganache@>=7.0.0 # install ganache
+  - python -m pip install termcolor eth_abi polling web3
 
 install:
   - gradle publish -b Obsidian_Runtime/build.gradle
